--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   cached_network_image: ^3.2.3
   persian_datetime_picker: ^2.6.0
   maps_launcher: ^2.2.0
+  url_launcher: ^6.2.2
   
 dev_dependencies:
   flutter_test:
