--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.7.0+7
+version: 0.8.0+8
 
 environment:
   sdk: '>=3.0.3 <4.0.0'
@@ -69,6 +69,7 @@ dependencies:
   persian_datetime_picker: ^2.6.0
   maps_launcher: ^2.2.0
   url_launcher: ^6.2.2
+  package_info_plus: ^5.0.1
   
 dev_dependencies:
   flutter_test:
