--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   package_info_plus: ^5.0.1
   flutter_map_animations: ^0.5.3
   persian: ^1.2.0
+  permission_handler: ^11.1.0
   
 dev_dependencies:
   flutter_test:
