--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBYO4Wdb-jR4pxNnbFh3xMHIBWfKLdxxLs</string>
+	<string>AIzaSyBLUZD9jXLWGsBrnhtDhOGgUMf37P9fd3U</string>
 	<key>GCM_SENDER_ID</key>
-	<string>511795380278</string>
+	<string>262764376701</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.pishranesh.transportationdriver</string>
+	<string>com.pishranesh.novintaxidriver</string>
 	<key>PROJECT_ID</key>
-	<string>safarday-driver</string>
+	<string>novintaxi-driver</string>
 	<key>STORAGE_BUCKET</key>
-	<string>safarday-driver.appspot.com</string>
+	<string>novintaxi-driver.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:511795380278:ios:5b5856ab1d0cd600bdd897</string>
+	<string>1:262764376701:ios:6ea8f95891a9d63b623714</string>
 </dict>
 </plist>
