--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   persian: ^1.2.0
   permission_handler: ^11.1.0
   flutter_rating_bar: ^4.0.1
+  font_awesome_flutter: ^10.6.0
   
 dev_dependencies:
   flutter_test:
